# slippi-auth

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  go.mod  go.sum  start.sh
.github/workflows/: cmake.yml
cmd/slippi-auth/: main.go
pkg/slippi/: api.go
pkg/worker/: model.go  pool.go  worker.go
pkg/ws/: client.go
src/: pch.h
src/SlippiAuth/: Application.cpp  Application.h  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientPool.cpp  ClientPool.h  Core.h  Log.cpp  Log.h  WebSocketServer.h  main.cpp
src/SlippiAuth/Client/: Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientPool.cpp  ClientPool.h
src/SlippiAuth/Event/: ClientEvent.h  Event.h  ServerEvent.h
src/SlippiAuth/Events/: ClientEvent.h  ClientPoolEvent.h  Event.h  ServerEvent.h
src/SlippiAuth/Server/: Server.cpp  Server.h
src/SlippiAuth/Server/Util/: CustomConfig.h  LogBindings.h
src/SlippiAuth/WebSocketServer/: WebSocketServer.cpp  WebSocketServer.h
src/SlippiAuth/WebSocketServer/Util/: LogBindings.h
src/SlippiVerification/: Application.cpp
